# TwitchBot

./: Voice Recognition Integration Setup Guide.md  bot.py  chat_manager.py  command_handler.py  config.py  database_manager.py  discord_manager.py  flight_sim_manager.py  generate_streamerbot_commands.py  geographic_intelligence.py  index.css  index.html  index.tsx  littlenavmap_integration.py  main.py  manifest.json  metadata.json  ml_personality.py  optional.config.example.yaml  package.json  personality.py  personality_state.json  pyproject.toml  readme.md  readme_md.md  requirements.txt  setup_wizard.py  streamelements_integration.py  streamerbot_manager.py  swearwords.txt  test_bot.py  test_integration.py  test_personality.py  tts_manager.py  voice_integration.py  voice_recognition_manager.py  voice_recognition_manager.py.txt
web_dashboard/: AI Overlord Bot Control Panel.html  app.py
