# pyproject.toml

[tool.poetry]
name = "ai-overlord-bot"
version = "0.1.0"
description = "Flight-sim Twitch bot with voice, AI personality, and real-time data."
authors = ["You <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
twitchio = "2.6.0"
openai = "^1.10.0"
pydantic = "^2.0"
websockets = "^11.0"
motor = "^4.4"
cachetools = "^5.4"
backoff = "^2.2"
structlog = "^22.3"
fastapi = "^0.95"
streamer-bot-ws = {version = "^1.0", optional = true}

[tool.poetry.extras]
streamerbot = ["streamer-bot-ws"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

